--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,13 @@
-spring.datasource.url= jdbc:postgresql://192.168.1.197:5432/myapidb
+spring.datasource.url= jdbc:postgresql://172.24.23.208:5432/myapidb2
 spring.datasource.username= myapidbadmin
-spring.datasource.password= projectem06
+spring.datasource.password= mysecretpassword
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
-flyway.url=jdbc:postgresql://192.168.1.197:5432/myapidb
+flyway.url=jdbc:postgresql://172.24.23.208:5432/myapidb2
 flyway.schemas=public
 flyway.user= myapidbadmin
-flyway.password= projectem06
-#spring.flyway.baseline_on_migrate=true
+flyway.password= mysecretpassword
+spring.flyway.baseline_on_migrate=true
 
 
-spring.flyway.baselineOnMigrate=true
-spring.flyway.check-location=true
-spring.flyway.locations=classpath:db.migration
-spring.flyway.schemas=public
-spring.flyway.enabled=true
