--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ flyway.user= myapidbadmin
 flyway.password= mysecretpassword
 spring.flyway.baseline_on_migrate=true
 
+spring.jpa.open-in-view=false
+
 
