--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.1'
+	id 'org.springframework.boot' version '2.5.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
-	id 'org.flywaydb.flyway' version '8.4.1'
+	id 'org.flywaydb.flyway' version '8.0.2'
 }
+
+group = 'uf2.anime'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
@@ -13,28 +17,21 @@ flyway {
 	configFiles = ['src/main/resources/application.properties']
 }
 
-group = 'uf2.anime'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
 
-repositories {
-	mavenCentral()
-}
+
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'org.flywaydb:flyway-core:8.4.1'
+	implementation 'org.flywaydb:flyway-core:8.0.1'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.3'
-	implementation 'com.sipios:spring-search:0.2.0'
 
+	// visit http://localhost:8080/swagger-ui.html
+	implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
+//	implementation 'org.openapitools:openapi-generator-gradle-plugin:5.3.0'
 }
-
-
-
 
 test {
 	useJUnitPlatform()
